--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.10)
 
 set(PROJECT_NAME BlackJack)
 project(${PROJECT_NAME})
@@ -7,28 +7,27 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(SFML 2.5 REQUIRED COMPONENTS graphics system window)
 
 add_executable(BlackJack
-        src/main.cpp
-        src/ui.hpp
-        src/box.hpp
-        src/box.cpp
-        src/account.hpp
-        src/button.hpp
-        src/card.hpp
-        src/dealer_box.hpp
-        src/dealer_box.cpp
-        src/enums.hpp
+        src/Main.cpp
         src/game.hpp
         src/game.tpp
-        src/globals.hpp
+        src/card.hpp
+        src/card.cpp
+        src/shoes.hpp
+        src/shoes.cpp
+        src/box.hpp
+        src/box.cpp
+        src/dealer_box.hpp
+        src/dealer_box.cpp
         src/player_box.hpp
         src/player_box.cpp
-        src/resource.h
-        src/shoes.hpp
+        src/account.hpp
+        src/ui.hpp
         src/gui.hpp
+        src/gui.cpp
+        src/button.hpp
         src/button.cpp
-        src/card.cpp
-        src/shoes.cpp
-        src/gui.cpp)
+        src/enums.hpp
+        src/globals.hpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
         src assets)
